--- a/src/web/index.html
+++ b/src/web/index.html
@@ -7,6 +7,7 @@
     <script src="./min/recorder.js"></script>
     <script src="./renderer.js"></script>
     <link rel="stylesheet" href="./index.css" />
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"
       rel="stylesheet"
@@ -72,8 +73,28 @@
           </svg>
         </div>
         <div class="settings-rows">
-          <div class="settings-row"></div>
+          <div class="settings-row">
+            <div>
+              <span class="settings-title">Password</span>
+              <span class="settings-desc"
+                >The password to authenticate the server, default value is
+                `password`</span
+              >
+            </div>
+
+            <input id="pwd" value="password" />
+          </div>
+          <div class="settings-row">
+            <div>
+              <span class="settings-title">Host</span>
+              <span class="settings-desc"
+                >The host of the server to authenticate, default value is `localhost:3500`
+              </span>
+            </div>
+            <input id="host" value="localhost:3500" />
+          </div>
         </div>
+        <div class="settings-save-btn" onclick="saveSettings()">Save</div>
       </div>
     </div>
 
